plugins {
	id 'org.springframework.boot' version '3.1.3'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'springboot.web'
version = '1.0.0'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'commons-io:commons-io:2.11.0'
	implementation 'org.springframework.boot:spring-boot-devtools'
	implementation 'org.springframework.boot:spring-boot-starter-aop'
	implementation "javax.xml.bind:jaxb-api:2.3.1"
	implementation 'com.sun.xml.bind:jaxb-core:2.3.0.1'
	implementation "com.sun.xml.bind:jaxb-impl:2.3.1"
	implementation 'javassist:javassist:3.4.GA'
	implementation 'com.sun.xml.bind:jaxb-xjc:2.3.0'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}

jar {
	manifest {
		attributes 'Main-Class': 'springboot.web.downloader.WebDownloader'
	}
}
